fix(core): patch spotBugs error